@@ -1,4 +1,4 @@
-# Copyright (C)        2009 Romain Francois
+# Copyright (C)        2009 - 2010 Dirk Eddelbuettel and Romain Francois
 #
 # This file is part of Rcpp.
 #
